Bug 1759221 - Use -moz-box-pack: start on tabs. r=dao
So that overflowing content overflows always towards the end, rather
than getting centered.

Differential Revision: https://phabricator.services.mozilla.com/D143614

UltraBlame original commit: b360d0fa4d48b5f8fbe160ee92accffabc508624

--- a/browser/themes/shared/tabs.css
+++ b/browser/themes/shared/tabs.css
@@ -771,6 +771,14 @@ css
 *
 /
 ;
+padding
+-
+inline
+:
+2px
+!
+important
+;
 -
 moz
 -
@@ -780,12 +788,48 @@ align
 :
 stretch
 ;
-}
+/
+*
+Needed
+so
+that
+overflowing
+content
+overflows
+towards
+the
+end
+rather
+than
+getting
+centered
 .
-tabbrowser
--
+That
+prevents
 tab
-{
+opening
+animation
+from
+looking
+off
+at
+the
+start
+see
+bug
+1759221
+.
+*
+/
+-
+moz
+-
+box
+-
+pack
+:
+start
+;
 min
 -
 height
@@ -800,14 +844,6 @@ min
 -
 height
 )
-;
-padding
--
-inline
-:
-2px
-!
-important
 ;
 }
 /
